# capytown_granprix_RetoFinal

./: README.md
capytown_G0_granprix/: .gitignore  CLAUDE.md  DOCUMENTACION.md  iniciar.sh  iniciar_con_pull.sh  package.xml  setup.cfg  setup.py
capytown_G0_granprix/.claude/: settings.json
capytown_G0_granprix/Informe/: conference_101719_otro.tex
capytown_G0_granprix/capytown_g0_granprix/: __init__.py  maze_solver.py  metrics_logger.py  motion_events.py  motion_geometry.py  motion_grid.py  motion_lidar.py  motion_ruta.py  pare_detector.py  visualizador_web.py
capytown_G0_granprix/config/: metricas_params.yaml  navegacion_params.yaml  pare_params.yaml
capytown_G0_granprix/docs/: COMANDOS.md
capytown_G0_granprix/launch/: capytown_complete.launch.py  granprix.launch.py  movimiento.launch.py  navegacion.launch.py  solo_camara.launch.py  visualizacion.launch.py
capytown_G0_granprix/rviz/: granprix.rviz
capytown_G0_granprix/web/: index.html
